gen3/revproxy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: gen3-dev
    meta.helm.sh/release-namespace: default
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: revproxy-dev
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: cloud08.core.wits.ac.za
    http:
      paths:
      - backend:
          service:
            name: revproxy-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: minio-service
            port:
              number: 9000
        path: /minio-api/(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: minio-service
            port:
              number: 9001
        path: /minio/(.*)
        pathType: ImplementationSpecific
  tls:
  - secretName: cloud08-tls-secret
